--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.40.1
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-plotly==5.22.0
-xgboost==2.1.1
-requests==2.32.3
+streamlit
+pandas
+numpy
+scikit-learn
+plotly
+xgboost
+requests
